1. Add background images for technology page 2. Fix picture element's right align problem with justify-self: end; property: value;

--- a/css/main.css
+++ b/css/main.css
@@ -338,9 +338,7 @@
 
 .grid-container--technology > picture {
   grid-area: image;
-  height: 12rem;
-  object-fit: cover;
-  justify-self: stretch;
+  height: 15rem;
   overflow-y: hidden;
 }
 
@@ -460,7 +458,7 @@
 
   .grid-container--technology {
     --flow-space: 4rem;
-    grid-template-columns: repeat(2, minmax(1rem, 1fr)) repeat(2, minmax(0, 32rem));
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 4rem) repeat(2, minmax(0, 36rem));
     justify-content: start;
     align-content:start;
     grid-template-areas:
@@ -469,6 +467,7 @@
   }
 
   .grid-container--technology > picture {
+    justify-self: end;
     align-self:stretch;
     height: 24rem;
   }
@@ -508,6 +507,12 @@ body {
   }
 }
 
+@media (min-width: 45rem) {
+  .home {
+    background-image: url(../assets/home/background-home-desktop.jpg);
+  }
+}
+
 /* destination */
 
 .destination {
@@ -527,12 +532,6 @@ body {
   }
 }
 
-@media (min-width: 45rem) {
-  .home {
-    background-image: url(../assets/home/background-home-desktop.jpg);
-  }
-}
-
 /* crew */
 
 .crew {
@@ -549,5 +548,24 @@ body {
 @media (min-width: 45rem) {
   .crew {
     background-image: url(../assets/crew/background-crew-desktop.jpg);
+  }
+}
+
+/* technology */
+
+.technology {
+  background-image: url(../assets/technology/background-technology-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+  .technology {
+    background-position: center center;
+    background-image: url(../assets/technology/background-technology-tablet.jpg);
+  }
+}
+
+@media (min-width: 45rem) {
+  .technology {
+    background-image: url(../assets/technology/background-technology-desktop.jpg);
   }
 }
